@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2020 IDsec Solutions AB
+ * Copyright 2019-2022 IDsec Solutions AB
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -107,8 +107,8 @@ public class AssertThatTest {
   
   @Test
   public void testIsNotEmpty_Collection1() throws Exception {
-    AssertThat.isNotEmpty(Collections.singleton(new Integer(1)), "Msg");
-    AssertThat.isNotEmpty(Collections.singletonList(new Integer(1)), "Msg");
+    AssertThat.isNotEmpty(Collections.singleton(Integer.valueOf(1)), "Msg");
+    AssertThat.isNotEmpty(Collections.singletonList(Integer.valueOf(1)), "Msg");
   }
     
   @Test(expected = IllegalArgumentException.class)
